--- a/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
+++ b/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
@@ -10,7 +10,10 @@
       </div>
       <hr class="dark horizontal my-0" />
       <div class="card-footer p-3 table-responsive">
-        <table class="table table-responsive table-striped table-hover" ng-if="this.listProducts.length > 0">
+        <table
+          class="table table-responsive table-striped table-hover"
+          ng-if="this.listProducts.length > 0"
+        >
           <tr>
             <td>{{ "Id" | translate }}</td>
             <td>{{ "Name" | translate }}</td>
@@ -24,10 +27,16 @@
             <td>{{ item.price }}</td>
             <td>{{ item.barCode }}</td>
             <td>
-              <button (click)="updateProduct(item.id)" class="btn btn-behance m-1 btn-sm">
+              <button
+                (click)="updateProduct(item.id)"
+                class="btn btn-behance m-1 btn-sm"
+              >
                 {{ "Edit" | translate }}
               </button>
-              <button (click)="deleteProduct(item.id)" class="btn btn-danger m-1 btn-sm">
+              <button
+                (click)="deleteProduct(item.id)"
+                class="btn btn-danger m-1 btn-sm"
+              >
                 {{ "Delete" | translate }}
               </button>
             </td>
@@ -35,8 +44,13 @@
         </table>
       </div>
       <div>
-        <app-pagination [currentPage]="currentPage" [totalPages]="totalPages"
-          (pageChanged)="onPageChange($event)"></app-pagination>
+        <app-pagination
+          [pageNumber]="pageNumber"
+          [totalPages]="totalPages"
+          [pageSize]="pageSize"
+          [pageSizes]="[10, 20, 50, 100, 200, 500]"
+          (pageChanged)="onPageChange($event)"
+        ></app-pagination>
       </div>
     </div>
   </div>
