--- a/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
+++ b/AdminPanel/src/app/modules/product/view/product-list/product-list.component.html
@@ -42,6 +42,14 @@
             </td>
           </tr>
         </table>
+
+        <!-- <app-data-grid
+        [dataSource]="dataSource"
+        [gridSettings]="gridSettings"
+        [displayedColumns]="displayedColumns"
+        [selectionKey]="'id'"
+      ></app-data-grid> -->
+
       </div>
       <div>
         <app-pagination
